--- a/index.html
+++ b/index.html
@@ -427,11 +427,11 @@
                             <div class="form-group">
                                 <label>Data Management</label>
                                 <div class="btn-group">
-                                    <button class="btn btn-secondary" id="backup-btn">Backup Data (JSON)</button>
+                                    <button class="btn btn-secondary" id="backup-btn">Backup Data (Excel)</button>
                                     <button class="btn btn-warning" id="restore-btn">Restore Data</button>
                                     <button class="btn btn-danger" id="reset-btn">Factory Reset</button>
                                 </div>
-                                <input type="file" id="restore-file" hidden accept=".json">
+                                <input type="file" id="restore-file" hidden accept=".json, .xlsx, .xls">
                             </div>
                             <button class="btn btn-primary" id="save-settings-btn">Save Settings</button>
                         </div>
