--- a/index.html
+++ b/index.html
@@ -574,6 +574,10 @@
                         </div>
                         <button class="btn btn-success" id="mark-salary-paid-btn" style="width: 100%;">Mark Salary
                             Paid</button>
+                        <button class="btn" id="send-salary-whatsapp-btn"
+                            style="width: 100%; margin-top: 10px; background-color: #25D366; color: white;">
+                            📱 Send Details via WhatsApp
+                        </button>
                     </div>
 
                     <!-- Panel: Transactions (New) -->
@@ -749,7 +753,7 @@
     </div>
 
     <!-- SheetJS for Excel Export -->
-    <script src="https://cdn.sheetjs.com/xlsx-0.20.1/package/dist/xlsx.full.min.js"></script>
+    <script src="xlsx.full.min.js"></script>
     <script src="app.js"></script>
 
     <!-- WhatsApp Floating Button -->
